--- a/diff.html
+++ b/diff.html
@@ -1,1 +1,52 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>transition</title>
+</head>
+<style>
+    body{
+        color:white;
+    }
+    body{
+        background-color:blue;
+    }
+    #box{
+        display:flex;
+        
+        width:250px;
+        height:250px;
+        background-color:red;
+        justify-content: center;
+        align-items: center;
+        transition-property: background-color; 
+        transition-duration:1s;
+        /* transition-timing-function:ease-out 1s; */
+         /* transition-delay:1s;  */
+         /* sara ek saath he */
+        /* transition:background-color 1s ease-in-out 3s; */
+        transition:all 1s ease-in-out .3s; 
+    }
+    /* mtlb agr pointer box per jaaye toh kya hona chahiye */
+    #box:hover{
+   background-color:black;
+   height:300px;
+   width:300px;
+   border-radius:450px;
+   font-size:45px;
+    }
+</style>
+<body>
+    <h1 class="yhi"> i am the one</h1>
+   <div class="container">
+       <div id="box">
+   this is me
+       </div>
+
+   </div>
+
+</body>
+</html>
+
