--- a/diff.html
+++ b/diff.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShopKro</title>
     <style>
-
+          .container{
+              background-color:red;
+        }
+        .box{
+            background-color:blue;
+        }
     </style>
 </head>
 <body>
