--- a/diff.html
+++ b/diff.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShopKro like anju and manushree</title>
+    <title>ShopKro</title>
     <style>
           .container{
               background-color:red;
         }
         .box{
-            background-color:blue;
+            background-color:green;
         }
     </style>
 </head>
