--- a/diff.html
+++ b/diff.html
@@ -18,5 +18,15 @@
     <div class="container">
 <h1 class="box"> E-Commerce</h1>
     </div>
+        <nav class="navbar">
+        <div id="logo">
+            <ul>
+                <li class="item"><a href="a">Home</a>/li>
+                <li class="item"><a href="a">Services</a>/li>
+                <li class="item"><a href="a">About Us</a>/li>
+                <li class="item"><a href="a">Contact Us</a>/li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
