--- a/diff.html
+++ b/diff.html
@@ -21,10 +21,10 @@
         <nav class="navbar">
         <div id="logo">
             <ul>
-                <li class="item"><a href="a">Home</a>/li>
-                <li class="item"><a href="a">Services</a>/li>
-                <li class="item"><a href="a">About Us</a>/li>
-                <li class="item"><a href="a">Contact Us</a>/li>
+                <li class="item"><a href="a">Home</a></li>
+                <li class="item"><a href="a">Services</a></li>
+                <li class="item"><a href="a">About Us</a></li>
+                <li class="item"><a href="a">Contact Us</a></li>
             </ul>
         </div>
     </nav>
