--- a/diff.html
+++ b/diff.html
@@ -33,6 +33,9 @@
 </head>
 <body>
         <nav id="navbar">
+        <div class="logo">
+            <img src="https://th.bing.com/th/id/R.c46e7e982196a192f8e5f1f2a463f643?rik=5qWEL846Ztaj8w&riu=http%3a%2f%2fwww.nairobibusinessmonthly.com%2fwp-content%2fuploads%2f2016%2f11%2fonline-shopping.jpg&ehk=H1CSwOap2ESf1x6c667e2DWkI3plVMtjD2EW4uqTKtM%3d&risl=&pid=ImgRaw&r=0" >
+        </div>
         
             <ul>
                 <li class="item"><a href="a">Home</a></li>
