--- a/diff.html
+++ b/diff.html
@@ -85,6 +85,9 @@
             font-size: 1.3rem;
             border-radius: 10px;
         }
+        .btn:hover{
+            background-color: grey;
+        }
 
     </style>
 </head>
