--- a/diff.html
+++ b/diff.html
@@ -108,6 +108,7 @@
             position: fixed;
             top: 70%;
             left: 60%;
+            cursor: pointer;
         }
 
         .btn:hover {
@@ -136,6 +137,14 @@
             tempora ducimus illo iusto dolores eos recusandae, vitae ad inventore libero adipisci corrupti soluta
             voluptatum hic mollitia cupiditate vero?</p>
         <button class="btn">Shop Now</button>
+    </section>
+
+    <section class="services-container">
+        <h1 class="h-primary center">Our Services</h1>
+        <div class="box">
+            <img src="https://indian-retailer.s3.ap-south-1.amazonaws.com/s3fs-public/2021-05/revenge%20shopping.jpg" alt=""> 
+            <h2>done dona</h2>
+        </div>
     </section>
 </body>
 
