--- a/diff.html
+++ b/diff.html
@@ -75,7 +75,7 @@
 
         #home h1 {
             color: black;
-            position: fixed;
+            position: absolute;
             top: 20%;
             left: 55%;
 
@@ -84,7 +84,7 @@
 
         #home p {
             color: black;
-            position: fixed;
+            position: absolute;
             top: 35%;
             left: 60%;
             width: 350px;
