--- a/diff.html
+++ b/diff.html
@@ -105,7 +105,7 @@
             margin: 17px;
             font-size: 1.3rem;
             border-radius: 10px;
-            position: fixed;
+            position: absolute;
             top: 70%;
             left: 60%;
             cursor: pointer;
