--- a/diff.html
+++ b/diff.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+]<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -125,6 +125,13 @@
             height: 1px;
             align-items: center;
         }
+        .h-me {
+            font-size: 3.3rem;
+            padding: 15px;
+
+            height: 1px;
+            align-items: center;
+        }
 
         .h-secondary {
             font-size: 2.2rem;
@@ -230,7 +237,7 @@
 
     </section>
     <section id="client-section">
-        <h1 class="h-primary center ">our clients </h1>
+        <h1 class="h-me center ">Our Clients </h1>
         <div id="clients">
             <div class="client-items">
                 <img src="https://www.bing.com/th?id=OIP.bLJ7lnRyeBuj3qxZG7acNgHaEK&w=333&h=187&c=8&rs=1&qlt=90&o=6&dpr=1.25&pid=3.1&rm=2"
