--- a/page2.html
+++ b/page2.html
@@ -217,11 +217,11 @@
         <img src="https://images.unsplash.com/photo-1576566588028-4147f3842f27?ixlib=rb-1.2.1&raw_url=true&q=80&fm=jpg&crop=entropy&cs=tinysrgb&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464">
         <div class="des">
             <span> adidas</span>
-            <h2>Red jacket</h2>
+            <h2>Sporty White T-Shirt</h2>
             <h3>&#9733;&#9733;&#9733;&#9733;&#9733;</h3>
         
         
-            <h4>Rs 1200</h4> 
+            <h4>Rs 1000</h4> 
             <button class="button1">ADD TO CART</button>
         </div>
         </div>
