--- a/page2.html
+++ b/page2.html
@@ -241,7 +241,7 @@
         <img src="https://images.unsplash.com/photo-1620012253295-c15cc3e65df4?ixlib=rb-1.2.1&raw_url=true&q=80&fm=jpg&crop=entropy&cs=tinysrgb&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465>">    
         <div class="des">
             <span> adidas</span>
-            <h2>Navy Blue Shirt</h2>
+            <h2>Sky Blue wavy printed Shirt</h2>
             <h3>&#9733;&#9733;&#9733;&#9733;&#9733;</h3>
         
         
