--- a/diff.html
+++ b/diff.html
@@ -1,4 +1,4 @@
-]<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -195,6 +195,12 @@
        .time .money .pat{
            font-size: 1.5rem;     
        }
+        .time .money  .pat:hover{
+            text-decoration: underline;
+        }
+        .time .money h3:hover{
+            text-decoration: underline;
+        }
         footer{
             background: black;
             color: white;
