--- a/page2.html
+++ b/page2.html
@@ -168,6 +168,11 @@
            color: yellow;
 
        }
+         .fcontainer .fitem img:hover {
+        transition:all 0.1s ease-in-out;
+            transform: scale(1.4,1.4) ;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+       }
       
     </style>
 </head>
