--- a/diff.html
+++ b/diff.html
@@ -259,6 +259,8 @@
             <li class="item"><a href="a">Services</a></li>
             <li class="item"><a href="a">About Us</a></li>
             <li class="item"><a href="a">Contact Us</a></li>
+            <li class="item"><a href="a">Login</a></li>
+            <li class="item"><a href="a">Signup</a></li>
         </ul>
 
     </nav>
