--- a/page2.html
+++ b/page2.html
@@ -184,8 +184,8 @@
                 alt="">
         </div>
         <ul>
-            <li class="item" ><a href="a">Home</a></li>
-            <li class="item"><a href="a">Services</a></li>
+            <li class="item" ><a href="http://127.0.0.1:5500/frontpage.html">Home</a></li>
+            <li class="item"><a href="http://127.0.0.1:5500/web.html">Services</a></li>
             <li class="item"><a href="a">About Us</a></li>
             <li class="item"><a href="a">Contact Us</a></li>
         </ul>
