--- a/diff.html
+++ b/diff.html
@@ -305,7 +305,7 @@
                 </div> 
             </div>
             <div class="box">
-                <img src="https://th.bing.com/th/id/OIP.cqlsFj04tXVQoBTwGqeXvAHaJ4?pid=ImgDet&w=217&h=289&c=7&dpr=1.25"
+                <img src="https://prod-img.thesouledstore.com/public/theSoul/uploads/catalog/product/1646988774_3719189.jpg?format=webp&w=480&dpr=1.3"
                     alt="">
              
                 <div class="des">
@@ -320,7 +320,7 @@
                 </div> 
             </div>
             <div class="box">
-                <img src="https://th.bing.com/th/id/OIP.6vFfD2gP0DwIn9jYwSxuZwAAAA?pid=ImgDet&w=221&h=275&c=7&dpr=1.25"
+                <img src="https://th.bing.com/th/id/OIP.ARbLUB2nSSnbxHyVQtYcFgHaHa?w=210&h=210&c=7&r=0&o=5&dpr=1.25&pid=1.7"
                     alt="">
                
                 <div class="des">
