--- a/diff.html
+++ b/diff.html
@@ -272,9 +272,7 @@
     </nav>
     <section id="home">
         <h1 class="h-primary">Welcome to Shopchle</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, quod molestiae. Maiores, nisi! Sed, beatae,
-            tempora ducimus illo iusto dolores eos recusandae, vitae ad inventore libero adipisci corrupti soluta
-            voluptatum hic mollitia cupiditate vero?</p>
+        <p>India's most trusted and easily available clothes at your home in minimal prices</p>
         <button class="btn">Shop Now</button>
     </section>
 
